# deepstream_video_player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deepstream_video_player_zh_CN.ts  main.cpp  main.qml  player.cpp  player.h  qml.qrc
configures/: config_infer_yolov5.txt
